ajout dossier view, model et view-model

--- a/projet_tetris/projet_tetris.csproj
+++ b/projet_tetris/projet_tetris.csproj
@@ -7,4 +7,10 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="model\" />
+    <Folder Include="view-model\" />
+    <Folder Include="view\" />
+  </ItemGroup>
+
 </Project>
