--- a/projet_tetris/projet_tetris.csproj
+++ b/projet_tetris/projet_tetris.csproj
@@ -13,6 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="XamlAnimatedGif" Version="2.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="view\background.png" />
     <Resource Include="view\tetris.png" />
   </ItemGroup>
