--- a/projet_tetris/projet_tetris.csproj
+++ b/projet_tetris/projet_tetris.csproj
@@ -8,11 +8,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="view\background.gif" />
     <None Remove="view\background.png" />
     <None Remove="view\tetris.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="view\background.gif">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="WpfAnimatedGif" Version="2.0.2" />
     <PackageReference Include="XamlAnimatedGif" Version="2.0.2" />
   </ItemGroup>
 
